...
"0C2-LV-LAx.ibExternalAccessibilityDescription" = "CheckAllInstancesButton";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "AddInstanceButton"; ObjectID = "15P-VU-gSC"; */
"15P-VU-gSC.ibExternalAccessibilityDescription" = "AddInstanceButton";

...
"1UK-8n-QPP.title" = "Customize Toolbar…";

/* Class = "NSMenuItem"; title = "Version Dashboard"; ObjectID = "1Xt-HY-uBw"; */
"1Xt-HY-uBw.title" = "Version Dashboard";

...
"1wi-nK-egg.ibExternalAccessibilityDescription" = "ErrorLabel";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "OwncloudHostURL"; ObjectID = "2Dh-71-unK"; */
"2Dh-71-unK.ibExternalAccessibilityDescription" = "OwncloudHostURL";

...
"2Gm-kX-ml3.title" = "Webserver";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "EditInstanceLastCheck"; ObjectID = "2hU-PV-ipZ"; */
"2hU-PV-ipZ.ibExternalAccessibilityDescription" = "EditInstanceLastCheck";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "CopyDownloadURL"; ObjectID = "3I8-vI-FaJ"; */
"3I8-vI-FaJ.ibExternalAccessibilityDescription" = "CopyDownloadURL";

...
"3hP-Qd-euA.placeholderString" = "http://example.com/";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "OwncloudInstanceCreation"; ObjectID = "4MJ-ct-iDJ"; */
"4MJ-ct-iDJ.ibExternalAccessibilityDescription" = "OwncloudInstanceCreation";

...
"5kV-Vb-QxS.title" = "About Version Dashboard";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "JoomlaSave"; ObjectID = "6Po-Ww-qGE"; */
"6Po-Ww-qGE.ibExternalAccessibilityDescription" = "JoomlaSave";

...
"6qx-Y3-mPn.ibExternalAccessibilityDescription" = "RefreshSpinner";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "WebserverLabel"; ObjectID = "6rc-fo-hW0"; */
"6rc-fo-hW0.ibExternalAccessibilityDescription" = "WebserverLabel";

...
"75o-m5-aJw.title" = "Cancel";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "PiwikSave"; ObjectID = "7Mh-RA-6hh"; */
"7Mh-RA-6hh.ibExternalAccessibilityDescription" = "PiwikSave";

...
"88g-4D-8nc.title" = "PHP Version";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "StatusLabel"; ObjectID = "8AN-Ki-O7s"; */
"8AN-Ki-O7s.ibExternalAccessibilityDescription" = "StatusLabel";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "EditInstanceSystemname"; ObjectID = "95c-qw-ULD"; */
"95c-qw-ULD.ibExternalAccessibilityDescription" = "EditInstanceSystemname";

...
"AYu-sK-qS6.title" = "Main Menu";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "HostLabel"; ObjectID = "AmR-J1-2Dl"; */
"AmR-J1-2Dl.ibExternalAccessibilityDescription" = "HostLabel";

...
"Bue-0R-xcd.title" = "System";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "SystemLabel"; ObjectID = "BzC-Al-VNp"; */
"BzC-Al-VNp.ibExternalAccessibilityDescription" = "SystemLabel";

...
"Csj-fh-NFn.ibExternalAccessibilityDescription" = "OwncloudErrorMessage";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "CurrentVersionLabel"; ObjectID = "D4G-6k-UnL"; */
"D4G-6k-UnL.ibExternalAccessibilityDescription" = "CurrentVersionLabel";

...
"Dhg-Mj-GZ8.ibExternalAccessibilityDescription" = "OverviewInstancesChart";

/* Class = "NSToolbarItem"; label = "Detailed View"; ObjectID = "E4i-Mv-nM7"; */
"E4i-Mv-nM7.label" = "Detailed View";

...
"HAE-dF-iTj.ibExternalAccessibilityDescription" = "JoomlaCancel";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "EditInstanceHost"; ObjectID = "HBP-WW-ZLh"; */
"HBP-WW-ZLh.ibExternalAccessibilityDescription" = "EditInstanceHost";

...
"Iew-MW-iOQ.title" = "Current Version";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "PiwikHostURL"; ObjectID = "J7o-au-Ugx"; */
"J7o-au-Ugx.ibExternalAccessibilityDescription" = "PiwikHostURL";

...
"MaW-lU-m0K.ibExternalAccessibilityDescription" = "WebserverLabel";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "LastCheckLabel"; ObjectID = "Nve-po-yOl"; */
"Nve-po-yOl.ibExternalAccessibilityDescription" = "LastCheckLabel";

...
"OuF-5G-2f0.title" = "Text Cell";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "PiwikInstanceCreation"; ObjectID = "P93-jV-bbV"; */
"P93-jV-bbV.ibExternalAccessibilityDescription" = "PiwikInstanceCreation";

...
"PPU-99-apf.ibExternalAccessibilityDescription" = "PiwikAPIToken";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "EditInstanceApiToken"; ObjectID = "QeD-9V-aM8"; */
"QeD-9V-aM8.ibExternalAccessibilityDescription" = "EditInstanceApiToken";

...
"SKc-0J-o2d.title" = "Outdated instances";

/* Class = "NSTableView"; ibExternalAccessibilityDescription = "InstanceTableView"; ObjectID = "SUz-Zq-Pay"; */
"SUz-Zq-Pay.ibExternalAccessibilityDescription" = "InstanceTableView";

...
"Wpt-K6-smb.ibExternalAccessibilityDescription" = "HostLabel";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "WordpressHostURL"; ObjectID = "Wrg-Pp-ChO"; */
"Wrg-Pp-ChO.ibExternalAccessibilityDescription" = "WordpressHostURL";

...
"Yub-R7-B9C.title" = "Enable automatic instance refresh";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "EditInstanceSave"; ObjectID = "Ywn-Zn-yn1"; */
"Ywn-Zn-yn1.ibExternalAccessibilityDescription" = "EditInstanceSave";

...
"aUF-d1-5bR.title" = "Window";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "DownloadURL"; ObjectID = "akx-u9-XGq"; */
"akx-u9-XGq.ibExternalAccessibilityDescription" = "DownloadURL";

...
"bY0-gO-HiG.title" = "Current Version";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "PhpVersionLabel"; ObjectID = "bit-zb-leL"; */
"bit-zb-leL.ibExternalAccessibilityDescription" = "PhpVersionLabel";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "WordpressInstanceCreation"; ObjectID = "bqa-eA-va2"; */
"bqa-eA-va2.ibExternalAccessibilityDescription" = "WordpressInstanceCreation";

...
"fbO-nR-KgK.title" = "Cancel";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "WordpressSave"; ObjectID = "g7K-4a-4GT"; */
"g7K-4a-4GT.ibExternalAccessibilityDescription" = "WordpressSave";

...
"gkm-sP-GH4.title" = "Refresh";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "EditInstanceButton"; ObjectID = "gl2-Dz-Xy8"; */
"gl2-Dz-Xy8.ibExternalAccessibilityDescription" = "EditInstanceButton";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "RemoveInstanceButton"; ObjectID = "h8f-9x-UZL"; */
"h8f-9x-UZL.ibExternalAccessibilityDescription" = "RemoveInstanceButton";

...
"hEh-yb-k6z.ibExternalAccessibilityDescription" = "EditInstanceName";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "LatestVersionLabel"; ObjectID = "hIz-IQ-rem"; */
"hIz-IQ-rem.ibExternalAccessibilityDescription" = "LatestVersionLabel";

/* Class = "NSTextField"; ibExternalAccessibilityDescription = "JoomlaHostURL"; ObjectID = "hWe-RA-kh6"; */
"hWe-RA-kh6.ibExternalAccessibilityDescription" = "JoomlaHostURL";

...
"qma-Vy-6Lc.ibExternalAccessibilityDescription" = "Instance search";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "OwncloudSave"; ObjectID = "s5s-wg-rgq"; */
"s5s-wg-rgq.ibExternalAccessibilityDescription" = "OwncloudSave";

...
"vVe-Ou-vcK.ibExternalAccessibilityDescription" = "EditInstanceErrorMessage";

/* Class = "NSButton"; ibExternalAccessibilityDescription = "JoomlaInstanceCreation"; ObjectID = "wEb-ze-nrD"; */
"wEb-ze-nrD.ibExternalAccessibilityDescription" = "JoomlaInstanceCreation";

...
